--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "bootstrap": "^4.0.0",
     "express": "^4.16.2",
     "method-override": "^2.3.10",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "pg": "^7.4.1"
   }
 }
